--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 
 <body>
+    <!-- authForm -->
+    <section class="auth-section">
+        <h2>Login</h2>
+        <form action="">
+            <input type="email" name="email" id="">
+            <input type="password" name="password" id="">
+            <button id="login-button">Login</button>
+            <button id="register-button">Register</button>
+        </form>
+    </section>
+    <!-- ORDERS SECTION -->
+    <section class="order-section">
+        <h2>Order</h2>
+    </section>
     <script src="./firestore.js"></script>
     <script src="./firebase-config.js"></script>
     <script src="./authentication.js"></script>
