modifying the added scripts

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
     <script src="./firestore.js"></script>
     <script src="./firebase-config.js"></script>
-    <script src="./authentication.js"></script>
+    <script src="./auth.js"></script>
 </body>
 
 </html>
