add id names to email and password input fields

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <section class="auth-section">
             <h2>Login</h2>
             <form action="">
-                <input type="email" name="email" id="">
-                <input type="password" name="password" id="">
+                <input type="email" name="email" id="email">
+                <input type="password" name="password" id="password">
                 <button id="login-button">Login</button>
                 <button id="register-button">Register</button>
             </form>
